// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`terserOptions option should match snapshot for the "compress" option with an object value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}};var o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "compress" option with an object value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "compress" option with an object value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "compress" option with the "false" value: assets 1`] = `
Object {
  "main.js": "/*! For license information please see main.js.LICENSE.txt */
(()=>{var r={791:r=>{const n=null&&2+2;r.exports=function r(){const n=2+2;console.log(n+1+2)}}};var n={};function o(t){var e=n[t];if(e!==undefined){return e.exports}var s=n[t]={exports:{}};r[t](s,s.exports,o);return s.exports}var t=o(791)})();",
  "main.js.LICENSE.txt": "/* @preserve*/
",
}
`;

exports[`terserOptions option should match snapshot for the "compress" option with the "false" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "compress" option with the "false" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "compress" option with the "true" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "compress" option with the "true" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "compress" option with the "true" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" and set the option depending on the "output.environment" option ("es3"): assets 1`] = `
Object {
  "main.js": "!function() {
    var __webpack_modules__ = {
        931: function(module) {
            var abc, Person = {
                firstName: null,
                lastName: null
            }, Employee = Object.create(Person, {
                id: {
                    value: null,
                    enumerable: !0,
                    configurable: !0,
                    writable: !0
                }
            }), Manager = Object.create(Employee, {
                department: {
                    value: null,
                    enumerable: !0,
                    configurable: !0,
                    writable: !0
                }
            });
            module.exports = {
                Person: Person,
                Employee: Employee,
                Manager: Manager
            }, abc = {
                data() {
                    return {
                        a: 2
                    };
                }
            }, console.log(abc);
        }
    }, __webpack_module_cache__ = {};
    (function __webpack_require__(moduleId) {
        var cachedModule = __webpack_module_cache__[moduleId];
        if (void 0 !== cachedModule) return cachedModule.exports;
        var module = __webpack_module_cache__[moduleId] = {
            exports: {}
        };
        return __webpack_modules__[moduleId](module, module.exports, __webpack_require__), 
        module.exports;
    })(931);
}();",
}
`;

exports[`terserOptions option should match snapshot for the "ecma" and set the option depending on the "output.environment" option ("es3"): errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" and set the option depending on the "output.environment" option ("es3"): warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" and set the option depending on the "output.environment" option ("es5"): assets 1`] = `
Object {
  "main.js": "!function() {
    var __webpack_modules__ = {
        931: function(module) {
            var abc, Person = {
                firstName: null,
                lastName: null
            }, Employee = Object.create(Person, {
                id: {
                    value: null,
                    enumerable: !0,
                    configurable: !0,
                    writable: !0
                }
            }), Manager = Object.create(Employee, {
                department: {
                    value: null,
                    enumerable: !0,
                    configurable: !0,
                    writable: !0
                }
            });
            module.exports = {
                Person: Person,
                Employee: Employee,
                Manager: Manager
            }, abc = {
                data() {
                    return {
                        a: 2
                    };
                }
            }, console.log(abc);
        }
    }, __webpack_module_cache__ = {};
    (function __webpack_require__(moduleId) {
        var cachedModule = __webpack_module_cache__[moduleId];
        if (void 0 !== cachedModule) return cachedModule.exports;
        var module = __webpack_module_cache__[moduleId] = {
            exports: {}
        };
        return __webpack_modules__[moduleId](module, module.exports, __webpack_require__), 
        module.exports;
    })(931);
}();",
}
`;

exports[`terserOptions option should match snapshot for the "ecma" and set the option depending on the "output.environment" option ("es5"): errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" and set the option depending on the "output.environment" option ("es5"): warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" and set the option depending on the "output.environment" option ("es2020"): assets 1`] = `
Object {
  "main.js": "(() => {
    var __webpack_modules__ = {
        931: module => {
            var abc, Person = {
                firstName: null,
                lastName: null
            }, Employee = Object.create(Person, {
                id: {
                    value: null,
                    enumerable: !0,
                    configurable: !0,
                    writable: !0
                }
            }), Manager = Object.create(Employee, {
                department: {
                    value: null,
                    enumerable: !0,
                    configurable: !0,
                    writable: !0
                }
            });
            module.exports = {
                Person,
                Employee,
                Manager
            }, abc = {
                data: () => ({
                    a: 2
                })
            }, console.log(abc);
        }
    }, __webpack_module_cache__ = {};
    (function __webpack_require__(moduleId) {
        var cachedModule = __webpack_module_cache__[moduleId];
        if (void 0 !== cachedModule) return cachedModule.exports;
        var module = __webpack_module_cache__[moduleId] = {
            exports: {}
        };
        return __webpack_modules__[moduleId](module, module.exports, __webpack_require__), 
        module.exports;
    })(931);
})();",
}
`;

exports[`terserOptions option should match snapshot for the "ecma" and set the option depending on the "output.environment" option ("es2020"): errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" and set the option depending on the "output.environment" option ("es2020"): warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "5" value ("swc"): assets 1`] = `
Object {
  "main.js": "(()=>{var __webpack_modules__={931:module=>{var Person={firstName:null,lastName:null},Employee=Object.create(Person,{id:{value:null,enumerable:!0,configurable:!0,writable:!0}}),Manager=Object.create(Employee,{department:{value:null,enumerable:!0,configurable:!0,writable:!0}});module.exports={Person:Person,Employee:Employee,Manager:Manager},console.log({data(){return{a:2}}})}},__webpack_module_cache__={};function __webpack_require__(moduleId){var cachedModule=__webpack_module_cache__[moduleId];if(void 0!==cachedModule)return cachedModule.exports;var module=__webpack_module_cache__[moduleId]={exports:{}};return __webpack_modules__[moduleId](module,module.exports,__webpack_require__),module.exports}var __webpack_exports__=__webpack_require__(931)})();",
}
`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "5" value ("swc"): errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "5" value ("swc"): warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "5" value: assets 1`] = `
Object {
  "main.js": "(() => {
    var __webpack_modules__ = {
        931: module => {
            var abc, Person = {
                firstName: null,
                lastName: null
            }, Employee = Object.create(Person, {
                id: {
                    value: null,
                    enumerable: !0,
                    configurable: !0,
                    writable: !0
                }
            }), Manager = Object.create(Employee, {
                department: {
                    value: null,
                    enumerable: !0,
                    configurable: !0,
                    writable: !0
                }
            });
            module.exports = {
                Person: Person,
                Employee: Employee,
                Manager: Manager
            }, abc = {
                data() {
                    return {
                        a: 2
                    };
                }
            }, console.log(abc);
        }
    }, __webpack_module_cache__ = {};
    (function __webpack_require__(moduleId) {
        var cachedModule = __webpack_module_cache__[moduleId];
        if (void 0 !== cachedModule) return cachedModule.exports;
        var module = __webpack_module_cache__[moduleId] = {
            exports: {}
        };
        return __webpack_modules__[moduleId](module, module.exports, __webpack_require__), 
        module.exports;
    })(931);
})();",
}
`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "5" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "5" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "6" value ("swc"): assets 1`] = `
Object {
  "main.js": "(()=>{var __webpack_modules__={513:module=>{class Mortgage{constructor(principal,years,rate){this.principal=principal,this.years=years,this.rate=rate}get monthlyPayment(){let monthlyRate=this.rate/100/12;return this.principal*monthlyRate/(1-Math.pow(1/(1+monthlyRate),12*this.years))}get amortization(){let monthlyPayment=this.monthlyPayment,monthlyRate=this.rate/100/12,balance=this.principal,amortization=[];for(let y=0;y<this.years;y++){let interestY=0,principalY=0;for(let m=0;m<12;m++){let interestM=balance*monthlyRate,principalM=monthlyPayment-interestM;interestY+=interestM,principalY+=principalM,balance-=principalM}amortization.push({principalY,interestY,balance})}return amortization}}console.log({data:()=>({a:2})}),module.exports=Mortgage}},__webpack_module_cache__={};function __webpack_require__(moduleId){var cachedModule=__webpack_module_cache__[moduleId];if(void 0!==cachedModule)return cachedModule.exports;var module=__webpack_module_cache__[moduleId]={exports:{}};return __webpack_modules__[moduleId](module,module.exports,__webpack_require__),module.exports}var __webpack_exports__=__webpack_require__(513)})();",
}
`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "6" value ("swc"): errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "6" value ("swc"): warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "6" value: assets 1`] = `
Object {
  "main.js": "(() => {
    var __webpack_modules__ = {
        513: module => {
            var abc;
            abc = {
                data: () => ({
                    a: 2
                })
            }, console.log(abc), module.exports = class {
                constructor(principal, years, rate) {
                    this.principal = principal, this.years = years, this.rate = rate;
                }
                get monthlyPayment() {
                    let monthlyRate = this.rate / 100 / 12;
                    return this.principal * monthlyRate / (1 - Math.pow(1 / (1 + monthlyRate), 12 * this.years));
                }
                get amortization() {
                    let monthlyPayment = this.monthlyPayment, monthlyRate = this.rate / 100 / 12, balance = this.principal, amortization = [];
                    for (let y = 0; y < this.years; y++) {
                        let interestY = 0, principalY = 0;
                        for (let m = 0; m < 12; m++) {
                            let interestM = balance * monthlyRate, principalM = monthlyPayment - interestM;
                            interestY += interestM, principalY += principalM, balance -= principalM;
                        }
                        amortization.push({
                            principalY,
                            interestY,
                            balance
                        });
                    }
                    return amortization;
                }
            };
        }
    }, __webpack_module_cache__ = {};
    (function __webpack_require__(moduleId) {
        var cachedModule = __webpack_module_cache__[moduleId];
        if (void 0 !== cachedModule) return cachedModule.exports;
        var module = __webpack_module_cache__[moduleId] = {
            exports: {}
        };
        return __webpack_modules__[moduleId](module, module.exports, __webpack_require__), 
        module.exports;
    })(513);
})();",
}
`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "6" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "6" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "7" value: assets 1`] = `
Object {
  "main.js": "(() => {
    var __webpack_modules__ = {
        171: module => {
            module.exports = function(base, exponent) {
                return base ** exponent;
            };
        }
    }, __webpack_module_cache__ = {};
    (function __webpack_require__(moduleId) {
        var cachedModule = __webpack_module_cache__[moduleId];
        if (void 0 !== cachedModule) return cachedModule.exports;
        var module = __webpack_module_cache__[moduleId] = {
            exports: {}
        };
        return __webpack_modules__[moduleId](module, module.exports, __webpack_require__), 
        module.exports;
    })(171);
})();",
}
`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "7" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "7" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "8" value: assets 1`] = `
Object {
  "main.js": "(() => {
    var __webpack_modules__ = {
        78: module => {
            module.exports = async function(url) {
                try {
                    let request = await fetch(url), text = await request.text();
                    return JSON.parse(text);
                } catch (error) {
                    console.log(\`ERROR: \${error.stack}\`);
                }
            };
        }
    }, __webpack_module_cache__ = {};
    (function __webpack_require__(moduleId) {
        var cachedModule = __webpack_module_cache__[moduleId];
        if (void 0 !== cachedModule) return cachedModule.exports;
        var module = __webpack_module_cache__[moduleId] = {
            exports: {}
        };
        return __webpack_modules__[moduleId](module, module.exports, __webpack_require__), 
        module.exports;
    })(78);
})();",
}
`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "8" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ecma" option with the "8" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "format.beautify" option with "true" value: assets 1`] = `
Object {
  "main.js": "(() => {
    var r = {
        791: r => {
            r.exports = function() {
                console.log(7);
            };
        }
    }, o = {};
    (function t(e) {
        var n = o[e];
        if (void 0 !== n) return n.exports;
        var s = o[e] = {
            exports: {}
        };
        return r[e](s, s.exports, t), s.exports;
    })(791);
})();",
}
`;

exports[`terserOptions option should match snapshot for the "format.beautify" option with "true" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "format.beautify" option with "true" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "format.comments" option with the "true": assets 1`] = `
Object {
  "main.js": "/******/(()=>{// webpackBootstrap
/******/var r={
/***/791:
/***/r=>{r.exports=function(){console.log(7)}}
/***/
/******/},o={};
/************************************************************************/
/******/ // The module cache
/******/
/******/
/************************************************************************/
/******/
/******/ // startup
/******/ // Load entry module and return exports
/******/ // This entry module is referenced by other modules so it can't be inlined
/******/(
/******/
/******/ // The require function
/******/function t(e){
/******/ // Check if module is in cache
/******/var n=o[e];
/******/if(void 0!==n)
/******/return n.exports;
/******/
/******/ // Create a new module (and put it into the cache)
/******/var s=o[e]={
/******/ // no module.id needed
/******/ // no module.loaded needed
/******/exports:{}
/******/};
/******/
/******/ // Execute the module function
/******/
/******/
/******/ // Return the exports of the module
/******/return r[e](s,s.exports,t),s.exports;
/******/})(791);
/******/
/******/})();",
}
`;

exports[`terserOptions option should match snapshot for the "format.comments" option with the "true": errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "format.comments" option with the "true": warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ie8" option with the "false" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "ie8" option with the "false" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ie8" option with the "false" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ie8" option with the "true" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},e={};(function o(n){var t=e[n];if(t!==undefined)return t.exports;var s=e[n]={exports:{}};return r[n](s,s.exports,o),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "ie8" option with the "true" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "ie8" option with the "true" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "keep_classnames" option with the "false" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "keep_classnames" option with the "false" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "keep_classnames" option with the "false" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "keep_classnames" option with the "true" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "keep_classnames" option with the "true" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "keep_classnames" option with the "true" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "keep_fnames" option with the "false" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "keep_fnames" option with the "false" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "keep_fnames" option with the "false" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "keep_fnames" option with the "true" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function Foo(){console.log(7)}}},e={};(function __webpack_require__(o){var _=e[o];if(void 0!==_)return _.exports;var t=e[o]={exports:{}};return r[o](t,t.exports,__webpack_require__),t.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "keep_fnames" option with the "true" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "keep_fnames" option with the "true" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "mangle" option with object values: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "mangle" option with object values: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "mangle" option with object values: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "mangle" option with the "false" value: assets 1`] = `
Object {
  "main.js": "(()=>{var __webpack_modules__={791:module=>{module.exports=function(){console.log(7)}}},__webpack_module_cache__={};(function __webpack_require__(moduleId){var cachedModule=__webpack_module_cache__[moduleId];if(void 0!==cachedModule)return cachedModule.exports;var module=__webpack_module_cache__[moduleId]={exports:{}};return __webpack_modules__[moduleId](module,module.exports,__webpack_require__),module.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "mangle" option with the "false" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "mangle" option with the "false" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "mangle" option with the "true" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "mangle" option with the "true" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "mangle" option with the "true" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "module" option with the "false" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "module" option with the "false" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "module" option with the "false" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "module" option with the "true" value: assets 1`] = `
Object {
  "main.js": "var r,o;r={791:r=>{r.exports=function(){console.log(7)}}},o={},function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports}(791);",
}
`;

exports[`terserOptions option should match snapshot for the "module" option with the "true" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "module" option with the "true" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "nameCache" option with a empty object value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "nameCache" option with a empty object value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "nameCache" option with a empty object value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "output.beautify" option with "true" value: assets 1`] = `
Object {
  "main.js": "(() => {
    var r = {
        791: r => {
            r.exports = function() {
                console.log(7);
            };
        }
    }, o = {};
    (function t(e) {
        var n = o[e];
        if (void 0 !== n) return n.exports;
        var s = o[e] = {
            exports: {}
        };
        return r[e](s, s.exports, t), s.exports;
    })(791);
})();",
}
`;

exports[`terserOptions option should match snapshot for the "output.beautify" option with "true" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "output.beautify" option with "true" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "output.comments" option with the "true": assets 1`] = `
Object {
  "main.js": "/******/(()=>{// webpackBootstrap
/******/var r={
/***/791:
/***/r=>{r.exports=function(){console.log(7)}}
/***/
/******/},o={};
/************************************************************************/
/******/ // The module cache
/******/
/******/
/************************************************************************/
/******/
/******/ // startup
/******/ // Load entry module and return exports
/******/ // This entry module is referenced by other modules so it can't be inlined
/******/(
/******/
/******/ // The require function
/******/function t(e){
/******/ // Check if module is in cache
/******/var n=o[e];
/******/if(void 0!==n)
/******/return n.exports;
/******/
/******/ // Create a new module (and put it into the cache)
/******/var s=o[e]={
/******/ // no module.id needed
/******/ // no module.loaded needed
/******/exports:{}
/******/};
/******/
/******/ // Execute the module function
/******/
/******/
/******/ // Return the exports of the module
/******/return r[e](s,s.exports,t),s.exports;
/******/})(791);
/******/
/******/})();",
}
`;

exports[`terserOptions option should match snapshot for the "output.comments" option with the "true": errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "output.comments" option with the "true": warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "parse.ecma" option with the "8" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "parse.ecma" option with the "8" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "parse.ecma" option with the "8" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "safari10" option with the "false" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "safari10" option with the "false" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "safari10" option with the "false" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "safari10" option with the "true" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "safari10" option with the "true" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "safari10" option with the "true" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "toplevel" option with the "false" value: assets 1`] = `
Object {
  "main.js": "(()=>{var r={791:r=>{r.exports=function(){console.log(7)}}},o={};(function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports})(791)})();",
}
`;

exports[`terserOptions option should match snapshot for the "toplevel" option with the "false" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "toplevel" option with the "false" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "toplevel" option with the "true" value: assets 1`] = `
Object {
  "main.js": "var r,o;r={791:r=>{r.exports=function(){console.log(7)}}},o={},function t(e){var n=o[e];if(void 0!==n)return n.exports;var s=o[e]={exports:{}};return r[e](s,s.exports,t),s.exports}(791);",
}
`;

exports[`terserOptions option should match snapshot for the "toplevel" option with the "true" value: errors 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "toplevel" option with the "true" value: warnings 1`] = `Array []`;

exports[`terserOptions option should match snapshot for the "unknown" option: errors 1`] = `
Array [
  "Error: main.js from Terser plugin
\`unknown\` is not a supported option",
]
`;

exports[`terserOptions option should match snapshot for the "unknown" option: warnings 1`] = `Array []`;
